[package]
name = "fastly-template-rust-default"
version = "0.1.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
anyhow = "^1.0"
fastly = "^0.5.0"
log-fastly = "^0.1"
log = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
kanji = "~1.1.0"
chrono = "^0.4.0"
http = "^0.2.1"
regex = "1"
